Add background to body

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700|Open+Sans:300,400,600,700,800|Quicksand:300,400,500,600,700|Raleway:100,200,300,400,500,600,700,800,900&display=swap');
+
+
+
+
 body {
-    background: blue;
+
+    font-family: 'Quicksand', sans-serif;
+
+    background: linear-gradient(358deg, #016699, #24b4a4, #1f8acc) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+-webkit-animation: bgGradientGenerator 30s ease infinite;
+-moz-animation: bgGradientGenerator 30s ease infinite;
+animation: bgGradientGenerator 30s ease infinite;
+
+@-webkit-keyframes bgGradientGenerator {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes bgGradientGenerator {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes bgGradientGenerator {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
+}
+
+body h1 {
+    font-family: 'Lato', sans-serif;
+    font-size: 2em;
+    text-align: center;
+
+    color: white;
+
 }
