Test music tracks

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,3 +67,17 @@ body h1 {
             text-align:center;
             color: white;
         }
+
+
+        // Song Test
+
+        #song-test {
+            width: 400px;
+            background: fuchsia;
+        }
+
+        #bpm {
+  display:inline;
+  width: 200px;
+}
+
