Add station dropdown to homepage

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,4 +76,14 @@ body h1 {
             background: fuchsia;
         }
 
+// ------------------------------------------------------------
+// Dropdown
+// ------------------------------------------------------------
 
+
+#dropdown-container {
+    width: 20rem;
+    margin: 0 auto;
+
+    font-size: 1em;
+}
