--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,6 @@
 
 
 body {
-
     font-family: 'Questrial', sans-serif;
 
     background: linear-gradient(358deg, #016699, #24b4a4, #1f8acc) no-repeat center center fixed; 
@@ -19,61 +18,71 @@ body {
     -moz-animation: bgGradientGenerator 30s ease infinite;
     animation: bgGradientGenerator 30s ease infinite;
 
-@-webkit-keyframes bgGradientGenerator {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes bgGradientGenerator {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes bgGradientGenerator {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
+    @-webkit-keyframes bgGradientGenerator {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @-moz-keyframes bgGradientGenerator {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @keyframes bgGradientGenerator {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
 
 }
 
 body h1 {
+    width: 20%;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-bottom: 0;
+    padding: 30px;
 
-    padding: 50px;
     font-family: 'Questrial', sans-serif;
-
-    font-size: 2em;
+    font-size: 3em;
     font-weight: 200;
     text-align: center;
 
     color: white;
     opacity: 0.7;
+}
 
+#app {
+    position: fixed;
+    bottom: 10px;
+
+    color: lightgray;
+    
 }
 
 // TEMP STYLING
 
-        #content {
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .container {
-            display: none;
-        }
-        #keyboard {
-            margin: 2px!important;
-        }
+    #content {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .container {
+        display: none;
+    }
+    #keyboard {
+        margin: 2px!important;
+    }
 
-        #Selector {
-            margin: 0 auto;
-        }
-        .container p {
-            text-align:center;
-            color: white;
-        }
+    #Selector {
+        margin: 0 auto;
+    }
+    .container p {
+        text-align:center;
+        color: white;
+    }
 
 
 // ------------------------------------------------------------
@@ -84,5 +93,51 @@ body h1 {
 #dropdown-container {
     width: 20rem;
     margin: 0 auto;
-    font-size: 1em;
+
+    font-family: 'Lato', sans-serif;
+}
+
+#station_id {
+    width: 27rem;
+    height: 2em;
+    margin-bottom: 5px;
+    padding: 10px 30px;
+
+    color: white;
+    background-color: #084769;
+
+
+    font-size: 1.3em;
+    font-weight: 600;
+    text-align: center;
+    border-color: #084769;
+    border-radius: 10px;
+}
+
+#station-id:hover {
+    border: 2px solid #16BCCC;
+}
+
+button {
+    width: 12rem;
+    margin: 15px auto;
+    padding: 10px 10px;
+
+    color: white;
+    background-color: #084769;
+
+
+    font-size: 1.2em;
+    font-weight: 600;
+    text-align: center;
+
+    border-color: #084769;
+    border-radius: 10px;
+    border-radius: 10px;
+
+}
+
+button:hover, button:active {
+    border: 2px solid white;
+    transition: 0.4s;
 }
