Add fixes to submit button, work on tremolo

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -187,6 +187,8 @@ input:visited, input:focus {
     right: 2rem;
     width: 7rem;
     height: auto;
+    filter: saturate(0);
+    opacity: 0.8;
 
 }
 
