Refactoring and prepping code for audio viz

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -187,7 +187,7 @@ input:visited, input:focus {
     right: 2rem;
     width: 7rem;
     height: auto;
-    filter: saturate(0);
+    filter: saturate(0) invert(1);
     opacity: 0.8;
 
 }
