Developing audio viz

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -195,6 +195,14 @@ input:visited, input:focus {
 }
 
 
+// ---------------------------------------------------------------------------------
+// VISUALIZER
+// ---------------------------------------------------------------------------------
+
+#viz-canvas {
+    width: 100%;
+    height: 50%;
+}
 
 
 // ---------------------------------------------------------------------------------
