--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -200,8 +200,9 @@ input:visited, input:focus {
 // ---------------------------------------------------------------------------------
 
 #viz-canvas {
-    width: 100%;
-    height: 50%;
+    width: 700px;
+    height: 300px;
+    background-color:black;
 }
 
 
