Experiment with drawCircles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -203,7 +203,7 @@ input:visited, input:focus {
     width: 700px;
     height: 300px;
     margin: 0 auto;
-    background-color:black;
+    background-color:lightgrey;
 }
 
 #tone-viz {
