--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -203,7 +203,7 @@ input:visited, input:focus {
     width: 700px;
     height: 300px;
     margin: 0 auto;
-    background-color:lightgrey;
+    z-index: 1;
 }
 
 #tone-viz {
@@ -212,6 +212,13 @@ input:visited, input:focus {
     margin: 0 auto;
     background-color:lightgrey;
 }
+
+		tone-oscilloscope, tone-fft {
+			width: 100%;
+			height: 44px;
+			border-radius: 22px;
+			background-color: black;
+		}
 
 // ---------------------------------------------------------------------------------
 // ANIMATIONS
