--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,12 +52,12 @@ body {
 
 
 body h1 {
-    margin-top: 40px;
-    margin-bottom: 20px;
+    margin-top: 60px;
+    margin-bottom: 40px;
     margin-left: -50px;
 
     font-family: 'Questrial', sans-serif;
-    font-size: 3em;
+    font-size: 4em;
     font-weight: 200;
     text-align: center;
 
@@ -90,7 +90,6 @@ body h1 {
     width: 30rem;
     margin: 0 auto;
     font-family: 'Lato', sans-serif;
-
 }
 
 #station_id {
@@ -120,10 +119,7 @@ body h1 {
 }
 
 .select-css {
-
-
     box-sizing: border-box;
-
     box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
     border-radius: .5em;
     -moz-appearance: none;
@@ -158,23 +154,21 @@ body h1 {
     padding: 10px 5px;
 
     color: white;
-    background-color: #084769;
+    background-color: #135183;
 
 
     font-size: 1.2em;
     font-weight: 600;
     text-align: center;
 
-    border-color: #084769;
-    border-radius: 10px;
+    border-color:#135183;
     border-radius: 10px;
 
     opacity: 0.8;
-
 }
 
 input:hover, button:active {
-    border: 2px solid white;
+    border: 1px solid white;
     transition: 0.4s;
 }
 
@@ -186,8 +180,8 @@ input:visited, input:focus {
 #footer-logo {
     position: fixed;
     bottom: 2rem;
-    right: 2rem;
-    width: 7rem;
+    left: 2rem;
+    width: 5rem;
     height: auto;
 
     opacity: 0.8;
@@ -213,64 +207,80 @@ input:visited, input:focus {
     background-color:lightgrey;
 }
 
-		tone-oscilloscope, tone-fft {
-			width: 100%;
-			height: 44px;
-			border-radius: 22px;
-			background-color: black;
-		}
-
-
-// INFO BUTTON
-    #infobtn {
-        position: fixed;
-        left: 20px;
-        bottom: 20px; }
-
-
-        #infobtn-quit {
-        position: fixed;
-        right: 10px;
-        top: 10px; }
-
-        #infobtn-quit img {
-        width: 24px; }
-
-        #infowall {
-        position: fixed;
-        background: -webkit-linear-gradient(#e078bf, #6cb8fe);
-        /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(#e078bf, #6cb8fe);
-        /* For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(#e078bf, #6cb8fe);
-        /* For Firefox 3.6 to 15 */
-        background: linear-gradient(#e078bf, #6cb8fe);
-        /* Standard syntax */
-        height: 100%;
+    tone-oscilloscope, tone-fft {
         width: 100%;
-        z-index: 50;
-        display: none;
-        font-family: 'Roboto Mono', monospace; }
+        height: 44px;
+        border-radius: 22px;
+        background-color: black;
+    }
 
-        #infowall-content {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        text-align: center; }
 
-        #infowall-content h1 {
-        font-size: 3em;
-        margin-bottom: 0.5em; }
+// ABOUT OVERLAY
 
-        #infowall-content p {
-        font-size: 0.7em;
-        line-height: 1.5em;
-        margin-top: 1.5em; }
+#open-about {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    font-size: 2em;
+    cursor: pointer;
+}
+.overlay {
+    position: fixed;
+    height: 0%;
+    width: 100%;
+    z-index: 50;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(19,81,131);
+    background-color: rgba(19,81,131, 0.8);
+    overflow-y: hidden;
+    transition: 0.5s;
+}
 
-        #infowall-content a {
-        color: #00ffe7; }
+.overlay-content {
+    position: relative;
+    top: 25%;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 1.4em;
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+}
+
+
+
+.overlay h1 {
+    margin-bottom: 40px;
+
+    font-family: 'Questrial', sans-serif;
+    color: #24b4a4;
+}
+
+.overlay a {
+    display: block;
+    padding: 8px;
+
+    font-size: 1.3em;
+    text-decoration: none;
+        color: #24b4a4;
+    transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+
+
 // ---------------------------------------------------------------------------------
 // ANIMATIONS
 // ---------------------------------------------------------------------------------
@@ -325,4 +335,14 @@ input:visited, input:focus {
         font-size: 1.3em;
         opacity: 0.8;
     }
+}
+
+@media screen and (max-height: 450px) {
+  .overlay {overflow-y: auto;}
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
