--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -211,9 +211,9 @@ input:visited, input:focus {
 
 tone-oscilloscope, tone-fft {
     width: 100%;
-    height: 44px;
+    height: 100px;
     border-radius: 22px;
-    background-color: black;
+    background-color: blue;
 }
 
 
