Clean up code and experiment with unmute

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -309,6 +309,12 @@ a#inner-overlay-link {
     font-size: 60px;
 }
 
+#about-footer {
+    font-size: 1em;
+    font-weight: 200;
+    color: lightgray;
+}
+
 
 
 // ---------------------------------------------------------------------------------
