Update intro text and remove waveform

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,7 +52,7 @@ body {
 
 
 body h1 {
-    margin-top: 60px;
+    margin-top: 1.5em;
     margin-bottom: 40px;
     margin-left: -50px;
 
@@ -61,7 +61,7 @@ body h1 {
     font-weight: 200;
     text-align: center;
 
-    color: white;
+    color: #24C6ED;
 
     opacity: 0.8;
      -webkit-animation: fadein 2s ease-in; /* Safari, Chrome and Opera > 12.1 */
@@ -78,14 +78,11 @@ body h1 {
     bottom: 10px;
 
     color: lightgray;
-    
 }
 
 
-
-
 // ---------------------------------------------------------------------------------
-// Dropdown
+// DROPDOWN
 // ---------------------------------------------------------------------------------
 
 #dropdown-container {
@@ -136,7 +133,6 @@ body h1 {
     background-size: .65em auto, 100%;
 
     z-index: 2;
-
 }
 
 .select-css::-ms-expand {
@@ -153,7 +149,6 @@ body h1 {
 .select-css:focus {
     outline: none;
 }
-
 
 #select-button {
     width: 10rem;
@@ -191,8 +186,6 @@ input:visited, input:focus {
 }
 
 .button-explanation {
-
-
     font-size: 1.5em;
     line-height: 1.2em;
     text-align: center;
@@ -200,32 +193,55 @@ input:visited, input:focus {
 
     color: white;
     z-index: 2;
-
 }
+
 
 .intro-explanation {
     position: relative;
     top: 5%;
-    width: 60%;
+    width: 70%;
 
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 15%;
+    margin-right: 15%;
 
     font-size: 2em;
     line-height: 1.2em;
-    text-align: center;
+    text-align: left;
     opacity: 0;
 
     color: white;
     z-index: 2;
 
+    -webkit-animation-name: fadeInOut;
+    -moz-animation-name: fadeInOut;
+    -ms-animation-name: fadeInOut;
+    -o-animation-name: fadeInOut;
     animation-name: fadeInOut;
+
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    -ms-animation-delay: 1s;
+    -o-animation-delay: 1s;
     animation-delay: 1s;
+
+    -webkit-animation-duration: 20s;
+    -moz-animation-duration: 20s;
+    -ms-animation-duration: 20s;
+    -o-animation-duration: 20s;
     animation-duration: 20s;
+
+    -webkit-animation-iteration-count: 1;
+    -moz-animation-iteration-count: 1;
+    -ms-animation-iteration-count: 1;
+    -o-animation-iteration-count: 1;
     animation-iteration-count: 1;
 }
 
-
+.intro-explanation span#blue-text {
+    color: #24C6ED;
+    opacity: 100% !important;
+    font-weight: 700;
+}
 
 #footer-logo {
     position: fixed;
@@ -360,31 +376,31 @@ a#inner-overlay-link {
 
 @keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.8; }
+    to   { opacity: 0.9; }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.8; }
+    to   { opacity: 0.9; }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.8; }
+    to   { opacity: 0.9; }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.8; }
+    to   { opacity: 0.9; }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 0.8; }
+    to   { opacity: 0.9; }
 }
 
 // FADEINOUT
@@ -396,7 +412,7 @@ a#inner-overlay-link {
     }
     50% {
       animation-timing-function: ease-in;
-      opacity: 0.8;
+      opacity: 1;
     }
     to {
       animation-timing-function: ease-out;
@@ -404,19 +420,13 @@ a#inner-overlay-link {
     }
 }
 
-
-
-
 // ---------------------------------------------------------------------------------
 // MEDIA QUERIES
 // ---------------------------------------------------------------------------------
 
 
 @media only screen and (max-width: 710px) {
-    #dropdown-container {
 
-
-    }
 
     #station_id {
         width: 25rem;
