--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -150,7 +150,7 @@ body h1 {
     outline: none;
 }
 
-#select-button {
+#select-button, #stop-button {
     width: 10rem;
     margin: 1rem 8rem;
     padding: 10px 5px;
