--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -55,7 +55,7 @@ body {
 
 
 body h1 {
-    margin-top: 1.5em;
+    margin-top: 1.1em;
     margin-bottom: 40px;
     margin-left: -50px;
 
@@ -160,18 +160,18 @@ body h1 {
     display: flex;
     justify-content: center;
     align-content: center;
-    width: 28rem;
+    width: 27rem;
 }
 
 #select-button, #stop-button {
-    width: 12rem;
-    margin: 1rem 1rem;
-    padding: 0.7rem 2rem 0.7rem 0.1rem !important;
+    width: 11rem;
+    margin: 1rem 1.2rem;
+    padding: 0.7rem 1.8rem 0.7rem 0.1rem !important;
 
     color: white;
     background-color: #135183;
 
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight: 600;
     letter-spacing: 1.5px;
     text-align: center;
@@ -191,8 +191,8 @@ body h1 {
  
 .input-wrapper-play:before, .input-wrapper-stop:before {
     position: absolute;
-    top: 1.9rem;
-    right: .1rem;
+    top: 2rem;
+    right: .8rem;
     padding-right: 0.5em;
 
     font-family: FontAwesome;
@@ -200,20 +200,17 @@ body h1 {
     font-weight: normal;
     text-decoration: inherit;
     color: white;
-    font-size: 1.3em;
+    font-size: 1.2em;
     z-index: 3;
 }
 
 .input-wrapper-play:before {
     content: "\f04b";
-
 }
 
 .input-wrapper-stop:before {
     content: "\f04d";
-
 }
-
 
 
 #select-button:hover, #stop-button:hover {
@@ -228,6 +225,8 @@ body h1 {
 input:visited, input:focus {
     outline: none;
 }
+
+// EXPLANATION
 
 .button-explanation {
     font-size: 1.5em;
@@ -251,6 +250,7 @@ input:visited, input:focus {
     font-size: 2em;
     line-height: 1.2em;
     text-align: left;
+    text-shadow: 1px 1px rgba(0,0,0,0.5);
     opacity: 0;
 
     color: white;
@@ -473,6 +473,9 @@ a#inner-overlay-link {
 
 
 @media only screen and (max-width: 710px) {
+    * {
+        transition: 0.4s;
+    }
 
     #station_id {
         width: 25rem;
@@ -481,9 +484,43 @@ a#inner-overlay-link {
         font-size: 1.3em;
         opacity: 0.8;
     }
+
+    .intro-explanation {
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+        font-size: 1.6em;
+    }
+
+    #footer-logo {
+        opacity: 0 !important;
+    }
+
+    .organ-buttons  {
+
+        width: 23rem;
+    }
 }
 
-@media screen and (max-height: 450px) {
+// Small Screens
+
+@media screen and (max-width: 450px) {
+    * {
+        transition: 0.4s;
+    }
+
+    body h1 {
+        margin-top: 0.5em;
+
+        font-size: 2em;
+
+    }
+
+    .intro-explanation {
+        font-size: 1em;
+    }
+
+
   #about-overlay {overflow-y: auto;}
   #about-overlay a {font-size: 20px}
   #about-overlay .closebtn {
