Fix explanation styling issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -56,7 +56,7 @@ body {
 
 body h1 {
     margin-top: 1.1em;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     margin-left: -50px;
 
     font-family: 'Questrial', sans-serif;
@@ -74,6 +74,11 @@ body h1 {
             animation: fadein 2s ease-in;
 
     z-index: 2;
+}
+
+#of-blue {
+    color: white;
+    opacity: 0.7;
 }
 
 #app {
@@ -248,6 +253,7 @@ input:visited, input:focus {
     margin-right: 15%;
 
     font-size: 2em;
+    letter-spacing: 0.2px;
     line-height: 1.2em;
     text-align: left;
     text-shadow: 1px 1px rgba(0,0,0,0.5);
@@ -257,34 +263,34 @@ input:visited, input:focus {
     z-index: 2;
 
     -webkit-animation-name: fadeInOut;
-    -moz-animation-name: fadeInOut;
-    -ms-animation-name: fadeInOut;
-    -o-animation-name: fadeInOut;
+     -moz-animation-name: fadeInOut;
+      -ms-animation-name: fadeInOut;
+       -o-animation-name: fadeInOut;
     animation-name: fadeInOut;
 
     -webkit-animation-delay: 1s;
-    -moz-animation-delay: 1s;
-    -ms-animation-delay: 1s;
-    -o-animation-delay: 1s;
+     -moz-animation-delay: 1s;
+      -ms-animation-delay: 1s;
+       -o-animation-delay: 1s;
     animation-delay: 1s;
 
     -webkit-animation-duration: 20s;
-    -moz-animation-duration: 20s;
-    -ms-animation-duration: 20s;
-    -o-animation-duration: 20s;
+     -moz-animation-duration: 20s;
+      -ms-animation-duration: 20s;
+       -o-animation-duration: 20s;
     animation-duration: 20s;
 
     -webkit-animation-iteration-count: 1;
-    -moz-animation-iteration-count: 1;
-    -ms-animation-iteration-count: 1;
-    -o-animation-iteration-count: 1;
+     -moz-animation-iteration-count: 1;
+      -ms-animation-iteration-count: 1;
+       -o-animation-iteration-count: 1;
     animation-iteration-count: 1;
 }
 
 .intro-explanation span#blue-text {
     color: #24C6ED;
     opacity: 100% !important;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 .audio-explanation {
@@ -297,25 +303,27 @@ input:visited, input:focus {
     margin-right: 15%;
 
     font-size: 1.5em;
+    font-style: italic;
     line-height: 1.2em;
     text-align: center;
     text-shadow: 0.5px 0.5px rgba(0,0,0,0.5);
-    opacity: 0;
 
+
+    opacity: 0;
     color: lightgrey;
     z-index: 2;
 
     -webkit-animation-name: fadeInOut;
-    -moz-animation-name: fadeInOut;
-    -ms-animation-name: fadeInOut;
-    -o-animation-name: fadeInOut;
+     -moz-animation-name: fadeInOut;
+      -ms-animation-name: fadeInOut;
+       -o-animation-name: fadeInOut;
     animation-name: fadeInOut;
 
-    -webkit-animation-delay: 10s;
-    -moz-animation-delay: 10s;
-    -ms-animation-delay: 10s;
-    -o-animation-delay: 10s;
-    animation-delay: 10s;
+    -webkit-animation-delay: 13s;
+    -moz-animation-delay: 13s;
+    -ms-animation-delay: 13s;
+    -o-animation-delay: 13s;
+    animation-delay: 13s;
 
     -webkit-animation-duration: 12s;
     -moz-animation-duration: 12s;
