--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,7 +40,6 @@ body {
         50%{background-position:100% 50%}
         100%{background-position:0% 50%}
     }
-
 }
 
 .main-content-container {
@@ -52,7 +51,6 @@ body {
     width: 100%;
     height: 100vh;
 }
-
 
 body h1 {
     margin-top: 1.1em;
@@ -169,9 +167,9 @@ body h1 {
 }
 
 #select-button, #stop-button {
-    width: 11rem;
+    width: 10rem;
     margin: 1rem 1.2rem;
-    padding: 0.7rem 1.8rem 0.7rem 0.1rem !important;
+    padding: 0.7rem 0.1rem !important;
 
     color: white;
     background-color: #135183;
@@ -194,28 +192,7 @@ body h1 {
     width: 200px;
 }
  
-.input-wrapper-play:before, .input-wrapper-stop:before {
-    position: absolute;
-    top: 2rem;
-    right: .8rem;
-    padding-right: 0.5em;
 
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    color: white;
-    font-size: 1.2em;
-    z-index: 3;
-}
-
-.input-wrapper-play:before {
-    content: "\f04b";
-}
-
-.input-wrapper-stop:before {
-    content: "\f04d";
-}
 
 
 #select-button:hover, #stop-button:hover {
