Work on index stying

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,7 +61,7 @@ body h1 {
     font-weight: 200;
     text-align: center;
 
-    color: #24C6ED;
+    color: #40D9FF;
 
     opacity: 0.8;
      -webkit-animation: fadein 2s ease-in; /* Safari, Chrome and Opera > 12.1 */
@@ -223,7 +223,6 @@ input:visited, input:focus {
     z-index: 2;
 }
 
-
 .intro-explanation {
     position: relative;
     top: 5%;
@@ -268,7 +267,7 @@ input:visited, input:focus {
 }
 
 .intro-explanation span#blue-text {
-    color: #135183;
+    color: #40D9FF;
     opacity: 100% !important;
     font-weight: 900;
 }
