--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -189,7 +189,7 @@ body h1 {
 }
 
 .stop-button {
-    background-color: darkolivegreen;
+    background-color: darkslategray;
 }
 
 .input-wrapper-play, .input-wrapper-stop {
