Update button styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -189,7 +189,7 @@ body h1 {
 }
 
 .stop-button {
-    background-color: darkslategray;
+    background-color: #444;
     transition: 0.4s;
 }
 .play-button:hover, .stop-button:hover {
